unpackaged/main/default/objects/AddProduct__c/AddProduct__c.object-meta.xml
<CustomObject>
    <label>AddProduct</label>
    <nameField>
        <displayFormat>AP-{0}</displayFormat>
        <label>AddProducts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AddProducts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>