unpackaged/main/default/objects/AddProduct__c/fields/AddProductsJob__c.field-meta.xml
<CustomField>
    <fullName>AddProductsJob__c</fullName>
    <label>AddProductsJob</label>
    <referenceTo>AddProductsJob__c</referenceTo>
    <relationshipLabel>AddProducts</relationshipLabel>
    <relationshipName>AddProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>