unpackaged/main/default/objects/AddProduct__c/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <label>Mutliplier</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>