unpackaged/main/default/objects/AddProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>AddProducts</relationshipLabel>
    <relationshipName>AddProducts</relationshipName>
    <type>Lookup</type>
</CustomField>