unpackaged/main/default/objects/AddProduct__c/fields/User_Entered_Product_Key__c.field-meta.xml
<CustomField>
    <fullName>User_Entered_Product_Key__c</fullName>
    <label>User Entered Product Key</label>
    <type>TextArea</type>
</CustomField>